--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.20.2",
     "@heroui/button": "2.2.19",
     "@heroui/code": "2.2.14",
     "@heroui/input": "2.4.19",
@@ -24,12 +25,20 @@
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.22",
     "clsx": "2.1.1",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.8.1",
+    "formik": "^2.4.6",
     "framer-motion": "11.13.1",
     "gsap": "^3.13.0",
+    "html-to-text": "^9.0.5",
     "intl-messageformat": "10.7.16",
+    "lucide-react": "^0.514.0",
     "next": "15.3.1",
     "next-themes": "0.4.6",
+    "nodemailer": "^7.0.3",
     "ogl": "^1.0.11",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
@@ -40,6 +49,8 @@
     "@next/eslint-plugin-next": "15.3.1",
     "@react-types/shared": "3.29.0",
     "@types/node": "22.15.3",
+    "@types/nodemailer": "^6.4.17",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.31.1",
